# actinia-core

./: .coverage.075755b7636c.1461.046167  .coveragerc  .dockerignore  .flake8  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .pylintrc_allowed_to_fail  .shellcheckrc  404.html  AUTHORS.rst  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  README.rst  RELEASE.md  actinia_core_tests.ods  extra.css  index.html  job_resumption.md  logging.md  pyproject.toml  redis_queue.md  requirements-alpine.txt  requirements-grass-gis-py3.txt  requirements-grass-gis.txt  requirements-py3.txt  requirements.txt  requirements_ubuntu19.txt  ruff-merged.toml  ruff.toml  search.html  setup.cfg  setup.py  sitemap.xml  test_problems.md  tests_with_kvdb.sh  tests_with_redis.sh  (+1 more)
.github/docker-action/: action.yml
.github/workflows/: anchore-syft.yml  black.yml  codeql-analysis.yml  deploy_docs.yml  docker.yml  flake8.yml  linting.yml  post-pr-reviews.yml  python-publish.yml  tests.yml  update-version.yml
actinia_concepts/: index.html
authors/: index.html
changelog/: index.html
docker/: README.md  create-docs.sh  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  docker-swarm.sh  docker-swarm.yml  grass_addons_list.csv
docker/actinia-core/: Dockerfile  Dockerfile_alpine  README.md  actinia.cfg  grass_addons_list.csv  start-dev.sh  start.sh
docker/actinia-core-alpine/: Dockerfile  Dockerfile_alpine_full  Dockerfile_build_pkgs  Dockerfile_runtime_pkgs  README.md  actinia-test.cfg  actinia.cfg  grass_addons_list.csv  start-dev.sh  start.sh
docker/actinia-core-data/pgpass/: .grass7  .pgpass
docker/actinia-core-dev/: Dockerfile  actinia.cfg  endpoints.csv
docker/actinia-core-latest/: Dockerfile  README.md  grass_addons_list.csv
docker/actinia-core-prod/: Dockerfile  start.sh
docker/actinia-core-tests/: Dockerfile  Dockerfile-alpine  Dockerfile-alpine_old  actinia-test-noauth.cfg  actinia-test-worker-usedby-api.cfg  actinia-test-worker-usedby-worker.cfg  actinia-test.cfg  actinia.cfg
docker/actinia-core-ubuntu/: Dockerfile  README.md  actinia.cfg  start-dev.sh  start.sh
docker/actinia-core-ubuntu/snap/: install.sh  response.varfile
docker/actinia-core/snap/: install.sh  response.varfile
docker/fluentd/: Dockerfile  fluent.conf
docker/redis_queue_data/config/: redis.conf
docker/valkey_data/config/: valkey.conf
docs/: Makefile  README.md  actinia_concepts.rst  conf.py  index.rst  installation.rst  introduction.rst  mkdocs.yml  tutorial_data_access.rst  tutorial_landsat_ndvi.rst  tutorial_process_chain.rst  tutorial_sentinel2a_ndvi.rst  tutorial_strds_sampling.rst
docs/docs/: actinia.cfg  actinia_concepts.md  authors.md  changelog.md  index.md  installation.md  introduction.md  license.md  tutorial_data_access.md  tutorial_landsat_ndvi.md  tutorial_process_chain.md  tutorial_sentinel2_ndvi.md  tutorial_sentinel2a_ndvi.md  tutorial_strds_sampling.md
docs/gource/: README.md  gource.captions.txt  gource_actinia.sh  gource_captions.txt
grassdb/latlong_wgs84/PERMANENT/: .bashrc  DEFAULT_WIND  PROJ_INFO
grassdb/nc_spm_08_micro/PERMANENT/: .bash_history  .bashrc  PROJ_EPSG  PROJ_INFO  WIND
installation/: index.html
introduction/: index.html
license/: index.html
scripts/: README.md  ace  ace_test.sh  actinia-algebra  actinia-algebra.py  actinia-bench  actinia-server  actinia-user  create_swagger_docs.sh  curl_commands.sh  rq_custom_worker  rq_starter  run_server  update_major_version.sh  webhook-server  webhook-server-broken
scripts/exporter/: Makefile  exporter.html  exporter.py
scripts/importer/: Makefile  importer.html  importer.py
search/: search_index.json
src/actinia_core/: README.md  __init__.py  endpoints.py  health_check.py  main.py  testsuite.py  version.py
tests/: README.md  conftest.py  test_api_logging.py  test_async_mapset_merging.py  test_async_mapset_merging_strds.py  test_async_process_postgis_import_export.py  test_async_process_validation.py  test_async_process_validation_errors.py  test_async_processing.py  test_async_processing_2.py  test_async_processing_custom.py  test_async_processing_export.py  test_async_processing_export_file.py  test_async_processing_export_files.py  test_async_processing_export_to_storage.py  test_async_processing_export_vector.py  test_async_processing_import_export.py  test_async_processing_mapset.py  test_async_processing_stdin_parameter_parser.py  test_async_processing_stdout_parser.py  test_async_raster_export.py  test_aws_sentinel_interface.py  test_common_base.py  test_configuration.py  test_download_cache.py  test_geodata_import.py  test_google_cloud_interfaces.py  test_job_resumption.py  test_location_management.py  test_login.py  test_mapset_management.py  test_mapsets.py  test_message_logger.py  test_modules.py  test_noauth.py  test_process_queue.py  test_project_management.py  test_raster_colors.py  test_raster_import_pixellimit.py  test_raster_layer.py  (+19 more)
tests/data/: nc_test_poly.gpkg  poly.gpkg
tests/unittests/: keycloak.json  test_keycloak_user.py  test_sentinel2_processing_commands.py  test_version.py
tests_running/: conftest.py  test_async_mapset_merging.py  test_async_process_validation.py  test_async_process_validation_errors.py  test_async_processing_2.py  test_async_processing_export_to_storage.py  test_async_processing_import_export.py  test_async_processing_mapset.py  test_async_raster_export.py  test_geodata_import.py  test_location_management.py  test_login.py  test_mapset_management.py  test_raster_layer.py  test_raster_layers.py  test_raster_legend.py  test_raster_renderer.py  test_resource_logging.py  test_resource_storage.py  test_strds_management.py  test_strds_raster_management.py  test_strds_raster_renderer.py  test_user_management.py  test_vector_layers.py  test_vector_renderer.py
tutorial_data_access/: index.html
tutorial_landsat_ndvi/: index.html
tutorial_process_chain/: index.html
tutorial_sentinel2_ndvi/: index.html
tutorial_strds_sampling/: index.html
utils/: generate_release_notes.py
valkey_data/config/: .valkey
(+520 files in other folders)
