[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "actinia-core"
version = "4.1.0"
description = "Actinia Core is an open source REST API for scalable, distributed, high performance processing of geographical data that uses mainly GRASS GIS for computational tasks"
readme = "README.md"
authors = [{ name = "mundialis" }]
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
]
keywords = ["processing", "earth observation", "grass gis"]
dependencies = [
    "actinia-api @ https://github.com/mundialis/actinia-api/releases/download/3.2.0/actinia_api-3.2.0-py3-none-any.whl",
    "actinia-module-plugin @ https://github.com/mundialis/actinia-module-plugin/releases/download/2.3.1/actinia_module_plugin.wsgi-2.3.1-py2.py3-none-any.whl",
    "actinia-metadata-plugin @ https://github.com/mundialis/actinia-metadata-plugin/releases/download/1.0.2/actinia_metadata_plugin.wsgi-1.0.2-py2.py3-none-any.whl",
    "actinia-satellite-plugin @ https://github.com/mundialis/actinia_satellite_plugin/releases/download/0.1.0/actinia_satellite_plugin-0.1.0-py2.py3-none-any.whl",
    "actinia-statistic-plugin @ https://github.com/mundialis/actinia_statistic_plugin/releases/download/0.2.0/actinia_statistic_plugin-0.2.0-py2.py3-none-any.whl",
    "Flask==1.1.4",
    "click<8.0,>=5.1",
    "Jinja2<3.0,>=2.10.1",
    "boto3>=1.6.6",
    "colorlog>=4.2.1",
    "docutils==0.15",
    "Flask-HTTPAuth>=3.2.3",
    "Flask-RESTful>=0.3.6",
    "flask-restful-swagger-2",
    "Flask-Cors>=3.0.3",
    "fluent-logger>=0.9.4",
    "google-cloud>=0.32.0",
    "google-cloud-bigquery<=3.0.0",
    "google-cloud-storage>=1.6.0",
    "gunicorn>=19.9.0",
    "joblib==0.15.1",
    "MarkupSafe==2.0.1",
    "matplotlib==3.3.4",
    "passlib>=1.7.1",
    "ply>=3.11",
    "psutil>=5.7.0",
    "python-json-logger",
    "python-magic>=0.4.15",
    "Sphinx>=1.7.1",
    "threadpoolctl==2.1.0",
    "redis>=2.10.6",
    "requests>=2.20.0",
    "rq>=0.10.0",
    "setuptools",
    "uWSGI>=2.0.17",
    "wheel",
    "geopandas",
    "rasterio==1.2.10",
    "pystac==0.5.6",
    "pandas",
    "sentinelsat",
    "tqdm",
]
requires-python = ">=3.8"

[project.optional-dependencies]
plugins = []

[project.urls]
Homepage = "https://github.com/mundialis/actinia_core"
Tutorial = "https://mundialis.github.io/actinia_core"
