# [options]
# zip_safe = False
# packages = find:
# include_package_data = True
# package_dir =
#     =src
#
# [options.packages.find]
# where = src
# exclude =
#     tests
#
# [tool:pytest]
# addopts =
#     --cov actinia_core --cov-report term-missing
#     --verbose --tb=line -x
# norecursedirs =
#     dist
#     build
#     .tox
# markers =
#     dev: test current in development
#     unittest: completely independent test
